tests/files/parser_tests/should_fail/036.cmdr
//Should not parse weird function names
x = 4.3.4();